corpus/words.txt
===
Simple word
===

x

---

(source_file
 (command
  name: (word (word_content))))

===
Two words
===

a b

---

(source_file
 (command
  name: (word (word_content))
  arguments: (word_list (word (word_content)))))

===
Substitution + word content
===

$a-test

---

(source_file
 (command
  name: (word
         (variable_substitution)
         (word_content))))

===
Word content + variable substitution
===

test-$a

---

(source_file
 (command
  name: (word
         (word_content)
         (variable_substitution))))

===
Substitution + space
===

$a $b

---

(source_file
 (command
  name: (word (variable_substitution))
  arguments: (word_list
              (word (variable_substitution)))))

===
Simple string word
===

puts "Hello, world!"

---

(source_file
 (command
  name: (word (word_content))
  arguments: (word_list
              (quoted_word (word_content)))))

===
String word with variable substitution
===

puts "Hello, $name!"

---

(source_file
 (command
  name: (word (word_content))
  arguments: (word_list
              (quoted_word
               (word_content)
               (variable_substitution)
               (word_content)))))
